fix(chip-set): include `cropped-label-hack` for chipsets
So that label's font size while floating above becomes `0.875rem`
like other input fields. This avoids a part of label being cropped

--- a/src/components/chip-set/chip-set.scss
+++ b/src/components/chip-set/chip-set.scss
@@ -26,6 +26,7 @@
 
 @include shared_input-select-picker.outlined-style-overrides;
 @include shared_input-select-picker.floating-label-overrides;
+@include shared_input-select-picker.cropped-label-hack;
 @include shared_input-select-picker.disabled-overrides;
 @include shared_input-select-picker.readonly-overrides;
 @include shared_input-select-picker.leading-icon;
